# dao

./: .checkpatch.conf  .clang-format  .gitignore  .gitreview  DPDK_VERSION  README.md  meson.build  meson_options.txt
app/: meson.build
app/ovs-offload/: meson.build
app/ovs-offload/control/: meson.build  ood_eth_ctrl.c  ood_flow_ctrl.c  ood_msg_recv.c  ood_msg_send.c
app/ovs-offload/include/: ood_config.h  ood_ctrl_chan.h  ood_eth_ctrl.h  ood_eth_init.h  ood_flow_ctrl.h  ood_graph.h  ood_init.h  ood_lcore.h  ood_msg_ctrl.h  ood_node_ctrl.h  ood_repr.h
app/ovs-offload/init/: meson.build  ood_config.c  ood_ctrl_chan.c  ood_eth_init.c  ood_graph_init.c  ood_main.c  ood_repr_init.c
app/ovs-offload/node/: meson.build  ood_eth_rx.c  ood_eth_rx_priv.h  ood_eth_tx.c  ood_eth_tx_priv.h  ood_flow_mapper.c  ood_flow_mapper_priv.h  ood_node_ctrl.c  ood_repr_rx.c  ood_repr_rx_priv.h  ood_repr_tx.c  ood_repr_tx_priv.h  ood_tnl_decap.c  ood_tnl_decap_priv.h  ood_vxlan_encap.c  ood_vxlan_encap_priv.h
app/secgw-graph/: main.c  meson.build  secgw.c  secgw.h  secgw_netlink_ops.c  secgw_worker.c  secgw_worker.h
app/secgw-graph/cli/: cli.c  cli.h  cli_api.h  cli_conn.c  cli_conn.h  meson.build  secgw.cli  secgw_cli.c  secgw_cli.h
app/secgw-graph/devices/: secgw_device.h  secgw_ethdev.c  secgw_tap.c
app/secgw-graph/netlink/: secgw_netlink.h  secgw_netlink_route.c  secgw_netlink_xfrm.c
app/secgw-graph/nodes/: node_api.h  node_priv.h
app/secgw-graph/nodes/net/: error-drop.c  ip_api.h  ip_feature.c  ip_feature.h  ip_node_priv.h
app/secgw-graph/nodes/output/: interface-output.c  interface-output_priv.c  interface-output_priv.h
app/secgw-graph/nodes/rxtx/: ethdev-rx.c  ethdev-tx.c  rxtx_node_priv.h  tap-rx.c  tap-tx.c
app/smart-nic/: meson.build  smart-nic.cli
app/smart-nic/cli/: meson.build  smc_cli.c  smc_commands.list  smc_conn.c  smc_ethdev.c  smc_ethdev_priv.h  smc_graph_cli.c  smc_graph_cli_priv.h  smc_lcore.c  smc_lcore_priv.h  smc_mempool.c  smc_mempool_priv.h  smc_pipeline.c  smc_pipeline_priv.h  smc_port.c  smc_port_priv.h
app/smart-nic/include/: smc_cli_api.h  smc_config.h  smc_ethdev_tx_priv.h  smc_graph.h  smc_init.h  smc_node_ctrl.h
app/smart-nic/include/cli/: smc_cli.h  smc_conn.h  smc_ethdev.h  smc_graph_cli.h  smc_lcore.h  smc_mempool.h  smc_pipeline.h
app/smart-nic/init/: meson.build  smc_config.c  smc_graph.c  smc_main.c
app/smart-nic/node/: meson.build  smc_eth_rx.c  smc_eth_rx_priv.h  smc_eth_tx.c  smc_eth_tx_priv.h  smc_node_ctrl.c
app/virtio-l2fwd/: l2_eth_rx.c  l2_eth_tx.c  l2_node.h  l2_virtio_rx.c  l2_virtio_tx.c  meson.build  virtio_l2fwd.c
ci/test/dao-test/common/: copy_data.py  dao_test_script_wrapper.c  ep_common_ops.sh  ep_device_utils.sh  ep_guest_utils.sh  ep_host_utils.sh  meson.build  oxk-devbind-basic.sh  testpmd.sh  utils.sh
ci/test/dao-test/ovs/: meson.build  ovs_ping.sh  ovs_utils.sh
ci/test/dao-test/virtio/: meson.build
ci/test/dao-test/virtio_l2fwd/: meson.build  virtio_l2fwd_1c.sh  virtio_l2fwd_utils.sh
config/: arm64_cn10k_linux_gcc  arm64_cn9k_linux_gcc  meson.build
dep/dpdk/: meson.build
dep/libnl/: meson.build
doc/api/: doxy-api-index.md  doxy-api.conf.in  generate_doxygen.sh  meson.build
doc/guides/: conf.py  custom.css  index.rst  intro.rst  meson.build
doc/guides/_static/: install.html
doc/guides/_static/demo/: install.cast  install.html  nginx.cast  nginx.html  ood_plain.html  ood_vlan.cast  (+7 more)
doc/guides/applications/: index.rst  machine-learning.rst  ovs-offload.rst  secgw-graph.rst  smart-nic.rst  tls-proxy-nginx.rst  virtio-l2fwd.rst  vpp.rst
doc/guides/contributing/: coding.rst  index.rst  patch.rst  release.rst
doc/guides/faq/: faq.rst  index.rst
doc/guides/gsg/: build.rst  firmware.rst  index.rst  install.rst  kernel.rst  kmod.rst  system.rst
doc/guides/howtoguides/: github_pr.rst  index.rst  octep_agent.rst  ovs.rst  sdp_host.rst  virtio_host.rst
doc/guides/prog_guide/: common.rst  dma_lib.rst  flow.rst  index.rst  netlink_lib.rst  pem_lib.rst  port_group.rst  port_queue_group.rst  vfio_lib.rst  virtio_lib.rst  virtio_net_lib.rst
doc/guides/rel_notes/: index.rst  known_issues.rst  release_24_04.rst  release_24_05.rst  release_24_09.rst  release_25_01.rst
helper/: daoh_helper.c  daoh_helper.h  meson.build
kmod/: meson.build
kmod/vdpa/: meson.build
kmod/vdpa/octeon_ep/: Kbuild  meson.build  octep_vdpa.h  octep_vdpa_hw.c  octep_vdpa_main.c
lib/: meson.build
lib/common/: dao_assert.h  dao_bitmap.c  dao_bitmap.h  dao_config.h.in  dao_dma.h  dao_dynamic_string.c  dao_dynamic_string.h  dao_log.c  dao_log.h  dao_net.h  dao_util.c  dao_util.h  dao_version.h  dma.c  meson.build
lib/featurearc/: dao_graph_feature_arc.h  dao_graph_feature_arc_worker.h  feature_arc.c  meson.build
lib/flow/: dao_flow.c  dao_flow.h  default_profile.c  flow_acl.c  flow_acl_priv.h  flow_dbg.c  flow_dbg.h  flow_gbl_priv.h  flow_hw_offload.c  flow_hw_offload_priv.h  flow_parser.c  flow_parser_priv.h  meson.build  ovs_profile.c  profile_priv.h
lib/netlink/: dao_netlink.c  dao_netlink.h  dao_netlink_crypto.h  dao_netlink_route.c  dao_netlink_route.h  dao_netlink_xfrm.c  dao_netlink_xfrm.h  meson.build
lib/pal/: dao_pal.c  dao_pal.h  meson.build
lib/pem/: dao_pem.h  meson.build  pem.c  pem.h  sdp.c  sdp.h
lib/portgroup/: dao_port_group.h  dao_portq_group.h  dao_portq_group_worker.h  meson.build  port_group.c  portq_group.c
lib/vfio/: dao_vfio_platform.c  dao_vfio_platform.h  meson.build
lib/virtio/: dao_virtio.h  meson.build  virtio_dev.c  virtio_dev_priv.h  virtio_mbox.c  virtio_mbox.h
lib/virtio/spec/: virtio.h  virtio_crypto.h  virtio_net.h
lib/virtio_net/: dao_virtio_netdev.h  meson.build  virtio_net_deq.c  virtio_net_deq_ext.c  virtio_net_enq.c  virtio_net_enq_ext.c  virtio_net_priv.h  virtio_netdev.c
lib/workers/: dao_workers.c  dao_workers.h  meson.build
tests/: meson.build
tests/bar-rw/: main.c  meson.build
tests/dpi_test/: main.c  meson.build
tests/flow-offload/: flow.h  main.c  meson.build  sample_flow.c
tests/virtio-extbuf/: meson.build  virtio_extbuf_main.c
(+91 files in other folders)
